--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
       color: #064d4d;
     }
   </style>
+  
+  <link rel="manifest" href="manifest.json" />
+<link rel="icon" type="image/png" href="icon.png" />
+<meta name="theme-color" content="#00796b" />
+
 </head>
 <body>
 
