--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
   <p>اختبر سرعتك وذكاءك وتحدَّ أصدقاءك في أجواء مليئة بالحماس!</p>
 
   <div class="by">🧑‍💻 تطوير: بلال خياط</div>
+<button onclick="startGame()">ابدأ</button>
+
+<script>
+  function startGame() {
+    window.location.href = "home.html"; // أو الاسم الجديد
+  }
+</script>
 
   <button onclick="startGame()">ابدأ</button>
 
