--- a/السؤال.html
+++ b/السؤال.html
@@ -16,59 +16,67 @@
       align-items: center;
       min-height: 100vh;
     }
-
     .question-container {
       background: #ffffffdd;
       padding: 30px 40px;
       border-radius: 20px;
       box-shadow: 0 0 20px rgba(0,0,0,0.1);
-      max-width: 700px;
-      width: 90%;
+      max-width: 800px;
+      width: 95%;
       text-align: center;
       position: relative;
     }
-
     .score-bar {
-      font-size: 1.2em;
-      font-weight: bold;
-      margin-bottom: 15px;
-      color: #0b8c8c;
-    }
-
-    .team-turn {
-      font-size: 1.5em;
-      font-weight: 900;
-      color: #0b8c8c;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
       margin-bottom: 20px;
-      padding: 10px 20px;
-      border: 3px solid #0b8c8c;
-      border-radius: 20px;
-      display: inline-block;
-      background: #d0f0f0cc;
-      user-select: none;
-      box-shadow: 0 0 8px #0b8c8caa;
-    }
-
-    .category-title {
-      font-size: 2em;
+      font-size: 1.3em;
       font-weight: bold;
-      color: #0b8c8c;
+    }
+    .team-box {
+      background: #e0f7fa;
+      padding: 15px 25px;
+      border-radius: 15px;
+      box-shadow: 0 0 10px #00968855;
+      color: #004d40;
+      min-width: 180px;
+    }
+    .team-box.active {
+      border: 3px solid #009688;
+      background-color: #c8fff8;
+    }
+    .team-name {
+      font-size: 1.3em;
+      font-weight: bold;
+    }
+    .team-score {
+      font-size: 1.1em;
+      margin-top: 5px;
+      color: #00796b;
+    }
+    .team-turn {
+      font-size: 1.6em;
+      font-weight: bold;
+      color: #00695c;
+      margin-bottom: 15px;
+    }
+    .category-title, .points {
+      font-size: 1.2em;
+      color: #004d40;
       margin-bottom: 10px;
     }
-
     .points {
-      font-size: 1.4em;
-      color: #444;
-      margin-bottom: 20px;
-    }
-
-    .question-text {
       font-size: 1.5em;
-      color: #222;
-      margin-bottom: 30px;
-      line-height: 1.6;
+      font-weight: bold;
+      color: #d35400;
     }
-
+    .question-text {
+      font-size: 1.7em;
+      color: #222;
+      line-height: 1.6;
+      margin: 20px 0;
+    }
     .timer {
       width: 120px;
       height: 120px;
@@ -77,20 +85,23 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 1.8em;
+      font-size: 2em;
       font-weight: bold;
       color: #0b8c8c;
       margin: 0 auto 25px auto;
-      position: relative;
       animation: pulseTimer 1.5s infinite;
     }
-
     @keyframes pulseTimer {
       0% { box-shadow: 0 0 0px #0b8c8c; }
       50% { box-shadow: 0 0 20px #0b8c8c99; }
       100% { box-shadow: 0 0 0px #0b8c8c; }
     }
-
+    .answer-text {
+      font-size: 2em;
+      color: #c0392b;
+      display: none;
+      font-weight: bold;
+    }
     .button {
       padding: 12px 24px;
       margin: 10px;
@@ -101,49 +112,35 @@
       font-weight: bold;
       transition: 0.3s;
     }
-
     .button.show { background-color: #f39c12; color: white; }
     .button.next { background-color: #2ecc71; color: white; }
-
-    .answer-text {
-      margin-top: 20px;
-      font-size: 1.4em;
-      color: #c0392b;
-      display: none;
-    }
-
-    .judge-buttons {
-      margin-top: 20px;
-      display: none;
-    }
-
-    .judge-buttons button {
+    .button:disabled { background-color: #ccc; color: #777; cursor: not-allowed; }
+    .judge-buttons, #team-select-container { display: none; margin-top: 20px; }
+    .judge-buttons button, .team-select button {
       padding: 12px 30px;
       font-size: 1.1em;
-      margin: 0 15px;
+      margin: 0 10px;
       border-radius: 15px;
       cursor: pointer;
       font-weight: 700;
-      transition: background-color 0.3s;
     }
-
     .judge-buttons .correct { background-color: #27ae60; color: white; }
     .judge-buttons .wrong { background-color: #c0392b; color: white; }
-
-    .score-display {
-      margin-top: 15px;
-      font-size: 1.3em;
-      color: #34495e;
-      font-weight: 700;
-    }
+    .team-select button { background-color: #2980b9; color: white; }
   </style>
 </head>
 <body>
 <div class="question-container">
   <div class="score-bar">
-    <span id="team1-info"></span> | <span id="team2-info"></span>
+    <div class="team-box" id="team1-box">
+      <div class="team-name" id="team1-name">فريق 1</div>
+      <div class="team-score" id="team1-score">0 نقطة</div>
+    </div>
+    <div class="team-box" id="team2-box">
+      <div class="team-name" id="team2-name">فريق 2</div>
+      <div class="team-score" id="team2-score">0 نقطة</div>
+    </div>
   </div>
-
   <div class="team-turn" id="team-turn">دور الفريق</div>
   <div class="category-title" id="category-title"></div>
   <div class="points" id="points"></div>
@@ -151,13 +148,19 @@
   <div class="timer" id="timer">90</div>
 
   <button class="button show" id="show-answer-btn">إظهار الجواب</button>
-  <button class="button next" id="next-btn">التالي</button>
+  <button class="button next" id="next-btn" disabled>التالي</button>
 
   <div class="answer-text" id="answer"></div>
 
   <div class="judge-buttons" id="judge-buttons">
     <button class="correct" id="correct-btn">صح</button>
     <button class="wrong" id="wrong-btn">خطأ</button>
+  </div>
+
+  <div id="team-select-container" class="team-select">
+    <p>من الفريق الذي أجاب بشكل صحيح؟</p>
+    <button id="team1-btn"></button>
+    <button id="team2-btn"></button>
   </div>
 
   <div class="score-display" id="score-display"></div>
@@ -169,86 +172,111 @@
   <audio id="answer-sound" src="sounds/answer.mp3" preload="auto"></audio>
 
   <script>
-    const currentCategory = localStorage.getItem('currentCategory');
-    const currentPoints = parseInt(localStorage.getItem('currentPoints'));
-    const currentIndex = parseInt(localStorage.getItem('currentIndex'));
-    let currentTeam = parseInt(localStorage.getItem('currentTeam')) || 1;
+    const team1Name = sessionStorage.getItem('team1') || 'فريق 1';
+    const team2Name = sessionStorage.getItem('team2') || 'فريق 2';
+    const team1Score = parseInt(sessionStorage.getItem('team1Score')) || 0;
+    const team2Score = parseInt(sessionStorage.getItem('team2Score')) || 0;
+    const currentTeam = parseInt(sessionStorage.getItem('currentTeam')) || 1;
 
-    const team1Name = localStorage.getItem('team1') || 'فريق 1';
-    const team2Name = localStorage.getItem('team2') || 'فريق 2';
-    const team1Score = parseInt(localStorage.getItem('team1Score')) || 0;
-    const team2Score = parseInt(localStorage.getItem('team2Score')) || 0;
+    document.getElementById("team1-name").textContent = team1Name;
+    document.getElementById("team2-name").textContent = team2Name;
+    document.getElementById("team1-score").textContent = `${team1Score} نقطة`;
+    document.getElementById("team2-score").textContent = `${team2Score} نقطة`;
+    document.getElementById("team-turn").textContent = `دور الفريق: ${currentTeam === 1 ? team1Name : team2Name}`;
 
-    document.getElementById('team1-info').textContent = `${team1Name}: ${team1Score} نقطة`;
-    document.getElementById('team2-info').textContent = `${team2Name}: ${team2Score} نقطة`;
-    document.getElementById('category-title').textContent = currentCategory;
-    document.getElementById('points').textContent = `${currentPoints} نقطة`;
-    document.getElementById('team-turn').textContent = `دور الفريق: ${currentTeam === 1 ? team1Name : team2Name}`;
-    
-    const questionsDatabase = {
-      // ... قاعدة الأسئلة الأصلية تبقى كما هي ...
-    };
+    if (currentTeam === 1) {
+      document.getElementById("team1-box").classList.add("active");
+    } else {
+      document.getElementById("team2-box").classList.add("active");
+    }
 
-    const [questionText, answerText] = questionsDatabase[currentCategory]?.[currentPoints]?.[currentIndex] || ['سؤال غير متوفر', 'جواب غير متوفر'];
+    // إظهار السؤال والإجابة
+    const data = JSON.parse(sessionStorage.getItem('questionsDatabase'));
+    const category = sessionStorage.getItem('currentCategory');
+    const points = parseInt(sessionStorage.getItem('currentPoints'));
+    const index = parseInt(sessionStorage.getItem('currentIndex'));
 
+    const [questionText, answerText] = data[category]?.[points]?.[index] || ['سؤال غير متوفر', 'جواب غير متوفر'];
     document.getElementById('question-text').textContent = questionText;
     document.getElementById('answer').textContent = answerText;
+    document.getElementById('category-title').textContent = category;
+    document.getElementById('points').textContent = `${points} نقطة`;
 
+    // تشغيل المؤقت
     let timeLeft = 90;
     const timerElement = document.getElementById("timer");
+    const timerSound = document.getElementById("timer-sound");
     const timer = setInterval(() => {
       timeLeft--;
       timerElement.textContent = timeLeft;
-      if (timeLeft <= 5 && timeLeft > 0) {
-        document.getElementById("timer-sound").play();
-      }
+      if (timeLeft <= 5 && timeLeft > 0) timerSound.play().catch(() => {});
       if (timeLeft <= 0) {
         clearInterval(timer);
         timerElement.textContent = "انتهى";
-        document.getElementById("timer-sound").play();
+        timerSound.play().catch(() => {});
+        timerElement.style.color = '#999';
       }
     }, 1000);
 
+    // تشغيل الصوت والإجابات
     const showAnswerBtn = document.getElementById("show-answer-btn");
+    const nextBtn = document.getElementById("next-btn");
     const judgeButtons = document.getElementById("judge-buttons");
     const scoreDisplay = document.getElementById("score-display");
+    const teamSelect = document.getElementById("team-select-container");
+    const team1Btn = document.getElementById("team1-btn");
+    const team2Btn = document.getElementById("team2-btn");
+
+    team1Btn.textContent = team1Name;
+    team2Btn.textContent = team2Name;
+
+    const playSound = id => document.getElementById(id).play().catch(()=>{});
 
     showAnswerBtn.addEventListener("click", () => {
       document.getElementById('answer').style.display = "block";
-      document.getElementById("answer-sound").play();
+      playSound("answer-sound");
       judgeButtons.style.display = "flex";
       clearInterval(timer);
     });
 
     document.getElementById("correct-btn").addEventListener("click", () => {
-      document.getElementById("correct-sound").play();
-      const scoreKey = `team${currentTeam}Score`;
-      let totalScore = parseInt(localStorage.getItem(scoreKey)) || 0;
-      totalScore += currentPoints;
-      localStorage.setItem(scoreKey, totalScore);
-      scoreDisplay.textContent = `+${currentPoints} نقطة مضافة | مجموع: ${totalScore}`;
+      playSound("correct-sound");
+      teamSelect.style.display = "block";
       judgeButtons.style.display = "none";
+    });
+
+    team1Btn.addEventListener("click", () => {
+      const newScore = team1Score + points;
+      sessionStorage.setItem('team1Score', newScore);
+      scoreDisplay.textContent = `+${points} لـ ${team1Name} | مجموع: ${newScore}`;
+      teamSelect.style.display = "none";
+      nextBtn.disabled = false;
+    });
+
+    team2Btn.addEventListener("click", () => {
+      const newScore = team2Score + points;
+      sessionStorage.setItem('team2Score', newScore);
+      scoreDisplay.textContent = `+${points} لـ ${team2Name} | مجموع: ${newScore}`;
+      teamSelect.style.display = "none";
+      nextBtn.disabled = false;
     });
 
     document.getElementById("wrong-btn").addEventListener("click", () => {
-      document.getElementById("wrong-sound").play();
-      scoreDisplay.textContent = `لم تُضف نقاط`;
+      playSound("wrong-sound");
+      scoreDisplay.textContent = `لم تُضف نقاط.`;
       judgeButtons.style.display = "none";
+      nextBtn.disabled = false;
     });
 
-    document.getElementById("next-btn").addEventListener("click", () => {
-      document.getElementById("click-sound").play();
-      currentTeam = currentTeam === 1 ? 2 : 1;
-      localStorage.setItem('currentTeam', currentTeam);
-
-      const used = JSON.parse(localStorage.getItem('usedQuestions') || "{}");
-      const key = `${currentCategory}_${currentPoints}_${currentIndex}`;
-      used[key] = true;
-      localStorage.setItem('usedQuestions', JSON.stringify(used));
-
+    nextBtn.addEventListener("click", () => {
+      playSound("click-sound");
+      const used = JSON.parse(sessionStorage.getItem('usedQuestions') || '{}');
+      used[`${category}_${points}_${index}`] = true;
+      sessionStorage.setItem('usedQuestions', JSON.stringify(used));
+      sessionStorage.setItem('currentTeam', currentTeam === 1 ? '2' : '1');
       window.location.href = "board.html";
     });
-  </script>
+</script>
 </div>
 </body>
 </html>
